--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,10 @@
-/* .App {
-  text-align: center;
-} */
+*, *::after, *::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+:root {
+  /* font-size: 2rem; */
+  font-family: sans-serif;
+}
