--- a/client/src/components/OurStory/style.css
+++ b/client/src/components/OurStory/style.css
@@ -1,18 +1,18 @@
 .story-container {
-  max-width: 100vw;
-  min-height: 60vh;
+  width: 100%;
+  min-height: 70vh;
   background-color: rgb(5, 15, 27);
-  display: flex;
-  /* position: relative; */
+  /* background-color: rgb(113, 171, 243); */
+
+
 }
 
 .first-img {
   position: relative;
-  top: -35px;
-  margin-left: 10%;
+  top: -30px;
   overflow: hidden;
-  min-width: 15rem;
-  height: 22rem;
+  width: 14rem;
+  height: 20rem;
 }
 
 .imag1,
@@ -32,16 +32,11 @@
 
 .second-image {
   position: relative;
-  top: 400px;
+  top: 90%;
+  right: 90px;
   overflow: hidden;
-  min-width: 25rem;
+  width: 25rem;
   height: 15rem;
-  margin-right: 10%;
+
 }
 
-.content {
-  text-align: center;
-  padding: 80px 50px;
-  color: beige;
-  min-width: 30rem;
-}
