--- a/client/src/components/Products/style.css
+++ b/client/src/components/Products/style.css
@@ -1,12 +1,13 @@
 .pastries {
     display: flex;
     justify-content: space-between;
-    padding:0 70px;
+    padding:10px 70px;
 
 }
 
 a {
     color: gray; 
+    text-decoration: none;
 }
 
 a:hover {
