--- a/client/src/components/Footer/footer.css
+++ b/client/src/components/Footer/footer.css
@@ -2,12 +2,12 @@
     width:100%;
     height:100vh;
     background-color:#221B50 ;
-    position: relative;
     bottom: 0;
     color: #FFFBE6;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
 
 .footerMainDiv {
@@ -158,6 +158,10 @@
   
   .footerA:hover:after{
     width: 100%;
+  }
+
+  .footerButtonTop {
+     
   }
 
 
