--- a/client/src/components/LoginPage/Login.css
+++ b/client/src/components/LoginPage/Login.css
@@ -133,6 +133,22 @@
       font-family: 'Courgette', cursive;
       font-size: 1.5em;
   }
+
+  .error_msg,
+.success_msg {
+	width: 370px;
+	padding: 15px;
+	margin: 5px 0;
+	font-size: 14px;
+	background-color: #221B50;
+	color: white;
+	border-radius: 5px;
+	text-align: center;
+}
+
+.success_msg {
+	background-color: #5cdd5c;
+}
   
   /* .loginButton-google{
     background: #DD4B39;
