--- a/client/src/components/Mail/style.css
+++ b/client/src/components/Mail/style.css
@@ -1,4 +1,4 @@
-*{
+/* *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -59,4 +59,4 @@ form button {
     width: 250px;
     margin: 20px auto 0;
     border-radius: 30px;
-}
+} */
