--- a/client/src/components/Checkout/style.css
+++ b/client/src/components/Checkout/style.css
@@ -1,21 +1,15 @@
 form {
   /* background-color: rgb(196, 255, 235); */
-  padding: 5px;
+ 
 }
 
-/* form input {
-  margin: 30px;
-  border: none;
-  border-bottom: 1px solid black;
-  background-color: transparent;
-} */
+
 
 form input {
   background-color: transparent;
   margin-top: 25px;
-
   border: none;
-  border-bottom: 1px solid gray;
+  border-bottom: 1px solid rgba(128, 128, 128, 0.562);
 }
 
 
