--- a/client/src/components/Products/style.css
+++ b/client/src/components/Products/style.css
@@ -1,21 +1,21 @@
-.pastries {
+.Products .pastries {
     display: flex;
     justify-content: space-between;
     padding:10px 70px;
 
 }
 
-.pastries a {
+.Products .pastries a {
     color: gray; 
     text-decoration: none;
 }
 
 
 
-.pastries a:visited {
+.Products .pastries a:visited {
     color: gray;
 }
-.pastries a:hover {
+.Products .pastries a:hover {
     color: rgb(5, 5, 48);
   
 
