--- a/client/src/components/Cartpage/cartstyle.css
+++ b/client/src/components/Cartpage/cartstyle.css
@@ -1,8 +1,7 @@
-/* .Cartpage * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-} */
+.Cartpage {
+  margin-bottom: 60px;
+
+}
 
 
 
@@ -73,4 +72,9 @@
   text-align: center;
   width: 70px;
   font-size: 0.8rem;
+}
+
+
+.Cartpage .total-price {
+  margin-left: 20px;
 }
