--- a/client/src/components/Checkout/style.css
+++ b/client/src/components/Checkout/style.css
@@ -45,3 +45,71 @@ form input:not(.name){
     margin-top: 20px;
      
 }
+
+
+/* products  */
+
+
+.Checkout .checkout-container {
+  padding: 40px;
+
+  /* margin-top: 50px; */
+  /* display: flex; */
+  width: 100%;
+  height: 10px;
+}
+
+.Checkout .box {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 500px;
+  height: 120px;
+}
+
+.Checkout .box .image {
+  width: 100px;
+  height: 100px;
+}
+
+.Checkout .box .image img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.Checkout .box-qty {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 25px;
+  height: 25px;
+  background-color:  rgb(34, 27, 80);
+  color: white;
+  border-radius: 100%;
+}
+
+.Checkout .price {
+  margin-left: 80px;
+}
+
+.Checkout .cart-title {
+  width: 220px;
+  background-color: rgb(255, 251, 230);
+}
+
+.total {
+  margin-top: 50px;
+  width: 100%;
+  border-top: 1px solid rgba(128, 128, 128, 0.486);
+  display: flex;
+  flex-direction: column;
+  padding: 40px;
+
+}
+
+
+.price-devision {
+  display: flex;
+  justify-content: space-between;
+}
