--- a/client/src/components/Products/style.css
+++ b/client/src/components/Products/style.css
@@ -1,21 +1,21 @@
-.Products .pastries {
-    display: flex;
-    justify-content: space-between;
-    padding:10px 70px;
+.Products {
+  margin: 70px 0 100px;
+}
 
+.Products .pastries {
+  margin-top: 30px;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 70px;
 }
 
 .Products .pastries p {
-    cursor: pointer;
+  cursor: pointer;
 }
-
-
 
 .Products .pastries a:visited {
-    color: gray;
+  color: gray;
 }
 .Products .pastries a:hover {
-    color: rgb(5, 5, 48);
-  
-
+  color: rgb(5, 5, 48);
 }
