--- a/client/src/components/Modal/style.css
+++ b/client/src/components/Modal/style.css
@@ -7,8 +7,7 @@
 .Modal .box-qty {
   display: flex;
   align-items: center;
-  /* background-color: beige; */
-  width: 70px;
+  width: 80px;
 }
 
 .Modal .box-qty p {
@@ -22,8 +21,11 @@
   justify-content: center;
   margin: 6px;
   border: none;
-  width: 30px;
+  width: 20px;
   height: 20px;
+  border-radius: 100%;
+  background-color: rgb(34, 27, 80);
+  color: white;
 }
 
 .Modal .cartItem {
