--- a/client/src/components/LoginPage/Login.css
+++ b/client/src/components/LoginPage/Login.css
@@ -100,8 +100,7 @@
     padding: 15px 20px;
     margin-bottom: 20px; 
     border-radius: 5px;
-     
-  
+ 
   }
   
   .submit{
@@ -115,6 +114,7 @@
     border-radius: 5px;
     font-family:'Courgette', cursive; 
     font-size: 1.5em;
+    margin-top: 5px;
   }
   .loginTitle{
     position: absolute;
